# pixdock

./: .gitignore  Dockerfile  README.md  TODOS.md  docker-compose.prod.yml  docker-compose.yml  install.sh  remaining-work.md  stack.yml
.github/workflows/: ci.yml  pages.yml  release.yml
backend/: Cargo.toml
backend/src/: audit.rs  auth.rs  cache.rs  headers.rs  lib.rs  main.rs  metrics.rs  ratelimit.rs  state.rs
backend/src/api/: routes.rs
backend/src/docker/: client.rs  containers.rs  images.rs  mod.rs  nodes.rs  services.rs
backend/src/ws/: delta.rs  handler.rs  mod.rs
backend/tests/: integration.rs
docs/: README.md  astro.config.mjs  index.html  package-lock.json
docs/src/components/: AsciiArt.astro  BlinkText.astro  CrtMonitor.astro  HitCounter.astro  MidiPlayer.astro  UnderConstruction.astro  WebRing.astro
docs/src/layouts/: RetroLayout.astro
docs/src/pages/: api.astro  architecture.astro  features.astro  guestbook.astro  index.astro  install.astro
docs/src/styles/: retro.css
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/dev_test/: index.html  test.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +page.svelte
frontend/tmp_sprites/: clean_alpha.py  clean_alpha_brick.py  fix_sprites.py  get_coords.py  package-lock.json  package.json  process.js  process.py
mockups/: PixDock Dashboard.html  app.jsx  data.jsx  primitives.jsx  theme.css
mockups/variations/: v1-faithful.jsx  v2-command.jsx  v3-arcade.jsx  v4-mainframe.jsx  v5-gameboy.jsx
(+44 files in other folders)
